# diffsol-stablehlo

./: CMakeLists.txt  README.md
src/: jit.h
tests/: test_jit.c
